# CocoroMemory

./: .gitignore  CHATMEMORY_CODE.md  CHATMEMORY_SPEC.md  CHATMEMORY_USAGE_GUIDE.md  CLAUDE.md  CocoroMemory.spec  LICENSES.txt  README.md  build.bat  build.ps1  copy_to_cocoroai.ps1  pyproject.toml  requirements-dev.txt  requirements.txt
.claude/: settings.local.json
.github/: copilot-instructions.md
Scripts/: CocoroMemoryHidden.vbs  ShutdownCocoroMemory.bat  initdb.bat  start_postgres.bat  stop_postgres.bat
pgsql/include/: pg_config.h
pgsql/lib/: iconv.lib  libcrypto.lib  libecpg.lib  libecpg_compat.lib  libintl.lib  liblz4.lib  libpgcommon.lib  libpgport.lib  libpgtypes.lib  libpq.lib  libssl.lib  libxml2.lib  libxslt.lib  libzstd.lib  plpgsql.lib  postgres.lib  wxbase32u.lib  wxbase32u_net.lib  wxbase32u_xml.lib  wxmsw32u_adv.lib  wxmsw32u_aui.lib  wxmsw32u_core.lib  wxmsw32u_html.lib  wxmsw32u_xrc.lib  zlib.lib
pgsql/share/locale/de/LC_MESSAGES/: libpq-16.mo  pg_dump-16.mo  postgres-16.mo
pgsql/share/locale/fr/LC_MESSAGES/: pg_dump-16.mo
pgsql/share/locale/ja/LC_MESSAGES/: libpq-16.mo  pg_dump-16.mo  pg_upgrade-16.mo  postgres-16.mo  psql-16.mo
pgsql/share/locale/ru/LC_MESSAGES/: libpq-16.mo  pg_dump-16.mo  pg_upgrade-16.mo  pgscripts-16.mo  plpgsql-16.mo  postgres-16.mo  psql-16.mo
pgsql/share/locale/uk/LC_MESSAGES/: initdb-16.mo  libpq-16.mo  pg_dump-16.mo  pltcl-16.mo  postgres-16.mo  psql-16.mo
src/: config_loader.py  litellm_chatmemory.py  main.py  postgres_manager.py
