[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
# 対象Pythonバージョン
target-version = "py310"
# 行の長さ
line-length = 100

# リンターの設定
[tool.ruff.lint]
# 有効にするルール
# E, F: flake8互換ルール
# I: isort互換
# D: docstring
# S: bandit互換セキュリティチェック
select = ["E", "F", "I", "S"]
ignore = [
  "D",    # ドキュメント関連
  "I001", # isortの設定
  "S311", # suspicious-random-choice
  "S603",
]

# 除外ディレクトリ
exclude = ["venv", ".venv", "build", "dist", "__pycache__"]

# isortの設定
[tool.ruff.lint.isort]
known-first-party = ["cocoro_core"]

# 型チェック用のmypy設定
[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
